# game_theory_thing_original_idea

./: .gitignore  README.md  pyproject.toml
gt/: __init__.py  __main__.py  ai_tourney.py  game_history.py  game_score.py  tourney.py
gt/runner/: __init__.py  match_runner.py
gt/strats/: __init__.py  strategy.py
gt/tests/: test_ai_tourney.py  test_strategy.py  test_tourney.py
ide/: game_theory_thing_original_idea.sublime-project
